--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Show data for an IP address" />
+    <meta name="keywords" content="ip, ip data, ipv4, ipv6, ip address" />
+    <meta name="author" content="Terence Zhang" />
     <title>IP Address Tracker</title>
   </head>
   <body>
